--- a/index.html
+++ b/index.html
@@ -3,57 +3,52 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Taller 4</title>
+    <title>Reto formulario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <form action="">
-      <label for="nombre">
-        <span>Nombre</span>
-      </label>
-      <br/>
-      <input type="text" id="nombre" name="nombre" placeholder="Pepito" onfocusout="convertir()" autocomplete="name" required/>
-      <br/>
-      <label for="apellido">
-        <span>Apellido</span>
-      </label>
-      <br/>
-      <input type="text" id="apellido" name="apellido" placeholder="Perez" autocomplete="lastname" required/>
-      <br/>
-        <label for="importante">
-          <span>¿Desea registrarse en el curso?</span>
-        </label>
-        <br/>
-        <input type="radio" id="si" name="fav_language" value="si">
-        <label for="si">Sí</label><br>
-        <input type="radio" id="No" name="fav_language" value="No">
-        <label for="No">No</label><br>
-      <br/>
-      <label for="email">
-      <span>¿Cuál es tu email?</span>
-        </label>
-        <br/>
-        <input type="email" id="email" class="item" required/>
-        <br/>
-      <label for="fecha de nacimiento">
-        <span>Fecha de nacimiento</span>
-      </label>
-      <br/>
-      <input type="date" id="fecha de nacimiento" name="fechaNacimiento" required/>
-      <br/>
-      <span>Contraseña</span>
-      </label>
-      <br/>
-      <input type="text" id="password" name="password" placeholder="******" autocomplete="password" required/>
-      <br/>
-      <span>Confirmar contraseña</span>
-      </label>
-      <br/>
-      <input type="text" id="password" name="password" placeholder="******" autocomplete="password" required/>
-      <br/>
-      <button>Enviar</button>
-      <br/>
-    </form>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <form action="">
+            <label for="nombre">Nombre</label>
+            <input class="form-control" type="text" id="nombre" onfocusout="convertir()">
+            <br/>
+            <label>Apellido</label>
+            <input class="form-control" tyoe="text" id="apellido" onchange="actboton()">
+            <br/>
+            <label>¿Desea registrarse en el curso?</label>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" id="radio1" onchange="registro()">
+              <label class="form-check-label">Sí</label>
+              <br>
+              <input class="form-check-input" type="radio" id="radio2" onchange="registro()">
+              <label class="form-check-label">No</label>
+            </div>
+            <div id="si_registro"></div>
+            <br>
+            <label>Email</label>
+            <input type="email" class="form-control" id="email">
+            <br/>
+            <label>Fecha de nacimiento</label>
+            <input type="date" class="form-control" id="fechanaci">
+            <br/>
+            <label>Contraseña</label>
+            <input type="password" id="password" placeholder="********" class="form-control" onfocusout="validar()" required>
+            <br/>
+            <label>Confirmar contraseña</label>
+            <input type="password" id="password1" placeholder="********" class="form-control" onfocusout="validar()" required>
+            <br/>
+            <button type="submit" class="btn btn-warning" disabled id="boton">
+              Enviar
+            </button>
+          </form>
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+  <script src="app.js"></script>
 </html>
