--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <input class="form-control" type="text" id="nombre" onfocusout="convertir()">
             <br/>
             <label>Apellido</label>
-            <input class="form-control" tyoe="text" id="apellido" onchange="actboton()">
+            <input class="form-control" type="text" id="apellido" onchange="actboton()">
             <br/>
             <label>¿Desea registrarse en el curso?</label>
             <div class="form-check">
-              <input class="form-check-input" type="radio" id="radio1" onchange="registro()">
+              <input class="form-check-input" type="radio" id="radio1" name="fav_language" onchange="registro()">
               <label class="form-check-label">Sí</label>
               <br>
-              <input class="form-check-input" type="radio" id="radio2" onchange="registro()">
+              <input class="form-check-input" type="radio" id="radio2" name="fav_language" onchange="registro()">
               <label class="form-check-label">No</label>
             </div>
             <div id="si_registro"></div>
